EDA insights for RNN

--- a/CMPE_255_Data_Mining_Project.ipynb
+++ b/CMPE_255_Data_Mining_Project.ipynb
@@ -352,7 +352,8 @@
         "plt.show()\n",
         "plt.close()\n",
         "\n",
-        "\n"
+        "\n",
+        "#Insights for RNN"
       ],
       "metadata": {
         "colab": {
