Saved model weights

--- a/CMPE_255_Data_Mining_Time_Series_Analysis.ipynb
+++ b/CMPE_255_Data_Mining_Time_Series_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1iIIRLDXMRH_jUZS7IhYUgmQx9rKpNvCF",
-      "authorship_tag": "ABX9TyMpJl3fQYic7Ld2qkHQgb2m",
+      "authorship_tag": "ABX9TyNlV3daAuuIrBun6ZeYfqVQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -331,9 +331,95 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from keras.models import load_model\n",
+        "from google.colab import files\n",
+        "\n",
+        "model.save('time_series_analysis.h5')\n",
+        "\n",
+        "files.download('time_series_analysis.h5')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "GX_A0t-gWCy9",
+        "outputId": "f37e68af-9e51-4328-b89a-4e04c363daa0"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_a179e9f1-dba8-41d8-8ff8-b30ae287fe50\", \"time_series_analysis.h5\", 261040)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "GX_A0t-gWCy9"
+        "id": "qKXfib_UZFfc"
       },
       "execution_count": null,
       "outputs": []
